@@ -8,6 +8,7 @@ Version 1.1.5 to be released
 - Bug #1565: Fixed the bug that COutputCache may fail to work when used to cache whole pages (Qiang)
 - Bug #1577: Fixed the bug in CMssqlSchema::compareTableNames() (Qiang)
 - Bug #1592: Fixed the bug that the hidden field generated by CHtml::checkBox may have the same ID as the checkbox. (Qiang)
+- Bug #1615: Fixed the bug that caused CLogFilter::filter() to add context informations when the log was empty (Y!!)
 - Enh #1522: The attributes of CDetailView now support the property 'visible' (Y!!)
 - Enh #1546: Fixed the bug that disabling behaviors did not detach behavior event handlers (Qiang)
 - Enh #1555: Added support to allow unloading/resetting an application component by calling CModule::setComponent() (Qiang)
@@ -26,7 +27,7 @@ Version 1.1.4 September 5, 2010
 - Bug #698: Now you can get and modify criteria of the current query in beforeFind() event handler (Sam Dark)
 - Bug #1031: Fixed the bug that the filters in CGridView does not work in IE (Qiang)
 - Bug #1119: Added CUploadedFile::reset() to make it more test-friendly (Qiang)
-- Bug #1176: Fixed the bug that CVarDumper does't highlight well strings with quotes (Qiang)
+- Bug #1176: Fixed the bug that CVarDumper doesn't highlight well strings with quotes (Qiang)
 - Bug #1376: Fixed the bug that the timestamps displayed in Web application log may not be formatted properly (Qiang)
 - Bug #1377: Fixed the bug that CStarRating did not work when not setting the model property (Qiang)
 - Bug #1382: Fixed space removal in CDbCriteria::compare() (Sam Dark)
